// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conversations Component Conversations component work 1`] = `
<ul
  class="ant-conversations"
>
  <li
    class="ant-conversations-item"
  >
    <div
      class="ant-conversations-icon"
    >
      <div
        id="conversation-test-id"
      >
        icon
      </div>
    </div>
    <span
      aria-label="What is Ant Design X ?"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
    >
      What is Ant Design X ?
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </span>
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
    >
      <div>
        Getting Started:
        <a
          href="https://ant-design.antgroup.com/index-cn"
          rel="noreferrer"
          target="_blank"
        >
          Ant Design !
        </a>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </span>
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      aria-label="In Docker, use 🐑 Ollama and initialize"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
    >
      In Docker, use 🐑 Ollama and initialize
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </span>
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      aria-label="Expired, please go to the recycle bin to check"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
    >
      Expired, please go to the recycle bin to check
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </span>
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      aria-label="No key"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
    >
      No key
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Conversations Component rtl render component should be rendered correctly in RTL direction 1`] = `
<ul
  class="ant-conversations ant-conversations-rtl"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography ant-typography-rtl"
        direction="rtl"
      >
        pinned
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <div
          class="ant-conversations-icon"
        >
          <div
            id="conversation-test-id"
          >
            icon
          </div>
        </div>
        <span
          aria-label="What is Ant Design X ?"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
          direction="rtl"
        >
          What is Ant Design X ?
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
          >
            lg
          </span>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
          >
            <span
              aria-hidden="true"
            >
              ...
            </span>
          </span>
        </span>
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    />
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
          direction="rtl"
        >
          <div>
            Getting Started:
            <a
              href="https://ant-design.antgroup.com/index-cn"
              rel="noreferrer"
              target="_blank"
            >
              Ant Design !
            </a>
          </div>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
          >
            lg
          </span>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
          >
            <span
              aria-hidden="true"
            >
              ...
            </span>
          </span>
        </span>
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          aria-label="In Docker, use 🐑 Ollama and initialize"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
          direction="rtl"
        >
          In Docker, use 🐑 Ollama and initialize
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
          >
            lg
          </span>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
          >
            <span
              aria-hidden="true"
            >
              ...
            </span>
          </span>
        </span>
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          aria-label="Expired, please go to the recycle bin to check"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
          direction="rtl"
        >
          Expired, please go to the recycle bin to check
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
          >
            lg
          </span>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
          >
            <span
              aria-hidden="true"
            >
              ...
            </span>
          </span>
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          aria-label="No key"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-typography-single-line ant-conversations-label"
          direction="rtl"
        >
          No key
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; word-break: keep-all; white-space: nowrap;"
          >
            lg
          </span>
          <span
            aria-hidden="true"
            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
          >
            <span
              aria-hidden="true"
            >
              ...
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;
